[gd_scene load_steps=2 format=3 uid="uid://cc04h4v7dt127"]

[ext_resource type="Script" uid="uid://d3ks82gmvl6q0" path="res://scripts/Oficina.gd" id="1_y8hmt"]

[node name="Oficina" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y8hmt")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
text = "Voltar"

[node name="RobotListLabels" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 130.0
text = "Seus Robôs:"

[node name="RobotDetailsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 150.0
offset_right = 900.0
offset_bottom = 550.0
text = "Selecione um robô para ver detalhes"

[node name="RobotScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 140.0
offset_right = 370.0
offset_bottom = 540.0

[node name="EquipButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 950.0
offset_top = 200.0
offset_right = 1150.0
offset_bottom = 250.0
text = "Equipar Peça"

[node name="UnequipButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 950.0
offset_top = 270.0
offset_right = 1150.0
offset_bottom = 320.0
text = "Desequipar"

[node name="PieceSelectionPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 300.0
offset_top = 100.0
offset_right = 800.0
offset_bottom = 500.0

[node name="PieceSelectionLabel" type="Label" parent="PieceSelectionPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 50.0
text = "Selecione uma peça para equipar:"

[node name="PieceList" type="VBoxContainer" parent="PieceSelectionPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 480.0
offset_bottom = 330.0

[node name="CloseButton" type="Button" parent="PieceSelectionPanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 350.0
offset_right = 480.0
offset_bottom = 381.0
text = "Fechar"
